.metadata/.plugins/org.eclipse.cdt.ui/global-build.log
Info: Nothing to build for Parcial 2 laboratorio
03:59:33 **** Incremental Build of configuration Debug for project Parcial 2 laboratorio ****
Info: Internal Builder is used for build
gcc -O0 -g3 -Wall -c -fmessage-length=0 -o "src\\Parcial 2 laboratorio.o" "..\\src\\Parcial 2 laboratorio.c" 
In file included from ..\src\Parcial 2 laboratorio.c:13:0:
..\src\controller_Parcial2.h:12:37: error: unknown type name 'LinkedList'
 int controller_1LeerArchivoDeLibros(LinkedList*);
                                     ^~~~~~~~~~
..\src\controller_Parcial2.h:13:42: error: unknown type name 'LinkedList'
 int controller_2LeerArchivoDeEditoriales(LinkedList*);
                                          ^~~~~~~~~~
..\src\controller_Parcial2.h:14:39: error: unknown type name 'LinkedList'
 int controller_3OrdenarLibrosPorAutor(LinkedList*);
                                       ^~~~~~~~~~
..\src\controller_Parcial2.h:15:32: error: unknown type name 'LinkedList'
 int controller_4ImprimirLibros(LinkedList*, LinkedList*);
                                ^~~~~~~~~~
..\src\controller_Parcial2.h:15:45: error: unknown type name 'LinkedList'
 int controller_4ImprimirLibros(LinkedList*, LinkedList*);
                                             ^~~~~~~~~~
..\src\controller_Parcial2.h:16:34: error: unknown type name 'LinkedList'
 int controller_5ListadoMinotauro(LinkedList*);
                                  ^~~~~~~~~~
..\src\controller_Parcial2.h:17:26: error: unknown type name 'LinkedList'
 int controller_6Mappeado(LinkedList*);
                          ^~~~~~~~~~
..\src\Parcial 2 laboratorio.c: In function 'main':
..\src\Parcial 2 laboratorio.c:29:5: warning: implicit declaration of function 'controller_1LeerArchivoDeLibros' [-Wimplicit-function-declaration]
     controller_1LeerArchivoDeLibros(listaLibros);
     ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
..\src\Parcial 2 laboratorio.c:33:5: warning: implicit declaration of function 'controller_2LeerArchivoDeEditoriales' [-Wimplicit-function-declaration]
     controller_2LeerArchivoDeEditoriales(listaEditoriales);
     ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
..\src\Parcial 2 laboratorio.c:37:5: warning: implicit declaration of function 'controller_3OrdenarLibrosPorAutor' [-Wimplicit-function-declaration]
     controller_3OrdenarLibrosPorAutor(listaLibros);
     ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
..\src\Parcial 2 laboratorio.c:42:6: warning: implicit declaration of function 'controller_4ImprimirLibros' [-Wimplicit-function-declaration]
      controller_4ImprimirLibros(listaLibros, listaEditoriales);
      ^~~~~~~~~~~~~~~~~~~~~~~~~~
..\src\Parcial 2 laboratorio.c:48:6: warning: implicit declaration of function 'controller_5ListadoMinotauro' [-Wimplicit-function-declaration]
      controller_5ListadoMinotauro(listaLibros);
      ^~~~~~~~~~~~~~~~~~~~~~~~~~~~
..\src\Parcial 2 laboratorio.c:54:6: warning: implicit declaration of function 'controller_6Mappeo' [-Wimplicit-function-declaration]
      controller_6Mappeo(listaLibros);
      ^~~~~~~~~~~~~~~~~~
04:00:13 **** Incremental Build of configuration Debug for project Parcial 2 laboratorio ****
Info: Internal Builder is used for build
gcc -O0 -g3 -Wall -c -fmessage-length=0 -o "src\\controller_Parcial2.o" "..\\src\\controller_Parcial2.c" 
gcc -O0 -g3 -Wall -c -fmessage-length=0 -o "src\\Parcial 2 laboratorio.o" "..\\src\\Parcial 2 laboratorio.c" 
In file included from ..\src\Parcial 2 laboratorio.c:13:0:
..\src\controller_Parcial2.h:12:37: error: unknown type name 'LinkedList'
 int controller_1LeerArchivoDeLibros(LinkedList*);
                                     ^~~~~~~~~~
..\src\controller_Parcial2.h:13:42: error: unknown type name 'LinkedList'
 int controller_2LeerArchivoDeEditoriales(LinkedList*);
                                          ^~~~~~~~~~
..\src\controller_Parcial2.h:14:39: error: unknown type name 'LinkedList'
 int controller_3OrdenarLibrosPorAutor(LinkedList*);
                                       ^~~~~~~~~~
..\src\controller_Parcial2.h:15:32: error: unknown type name 'LinkedList'
 int controller_4ImprimirLibros(LinkedList*, LinkedList*);
                                ^~~~~~~~~~
..\src\controller_Parcial2.h:15:45: error: unknown type name 'LinkedList'
 int controller_4ImprimirLibros(LinkedList*, LinkedList*);
                                             ^~~~~~~~~~
..\src\controller_Parcial2.h:16:34: error: unknown type name 'LinkedList'
 int controller_5ListadoMinotauro(LinkedList*);
                                  ^~~~~~~~~~
..\src\controller_Parcial2.h:17:26: error: unknown type name 'LinkedList'
 int controller_6Mappeado(LinkedList*);
                          ^~~~~~~~~~
..\src\Parcial 2 laboratorio.c: In function 'main':
..\src\Parcial 2 laboratorio.c:29:5: warning: implicit declaration of function 'controller_1LeerArchivoDeLibros' [-Wimplicit-function-declaration]
     controller_1LeerArchivoDeLibros(listaLibros);
     ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
..\src\Parcial 2 laboratorio.c:33:5: warning: implicit declaration of function 'controller_2LeerArchivoDeEditoriales' [-Wimplicit-function-declaration]
     controller_2LeerArchivoDeEditoriales(listaEditoriales);
     ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
..\src\Parcial 2 laboratorio.c:37:5: warning: implicit declaration of function 'controller_3OrdenarLibrosPorAutor' [-Wimplicit-function-declaration]
     controller_3OrdenarLibrosPorAutor(listaLibros);
     ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
..\src\Parcial 2 laboratorio.c:42:6: warning: implicit declaration of function 'controller_4ImprimirLibros' [-Wimplicit-function-declaration]
      controller_4ImprimirLibros(listaLibros, listaEditoriales);
      ^~~~~~~~~~~~~~~~~~~~~~~~~~
..\src\Parcial 2 laboratorio.c:48:6: warning: implicit declaration of function 'controller_5ListadoMinotauro' [-Wimplicit-function-declaration]
      controller_5ListadoMinotauro(listaLibros);
      ^~~~~~~~~~~~~~~~~~~~~~~~~~~~
..\src\Parcial 2 laboratorio.c:54:6: warning: implicit declaration of function 'controller_6Mappeo' [-Wimplicit-function-declaration]
      controller_6Mappeo(listaLibros);
      ^~~~~~~~~~~~~~~~~~
04:00:48 **** Incremental Build of configuration Debug for project Parcial 2 laboratorio ****
Info: Internal Builder is used for build
gcc -O0 -g3 -Wall -c -fmessage-length=0 -o "src\\controller_Parcial2.o" "..\\src\\controller_Parcial2.c" 
gcc -O0 -g3 -Wall -c -fmessage-length=0 -o "src\\Parcial 2 laboratorio.o" "..\\src\\Parcial 2 laboratorio.c" 
..\src\Parcial 2 laboratorio.c: In function 'main':
..\src\Parcial 2 laboratorio.c:54:6: warning: implicit declaration of function 'controller_6Mappeo' [-Wimplicit-function-declaration]
      controller_6Mappeo(listaLibros);
      ^~~~~~~~~~~~~~~~~~
gcc -O0 -g3 -Wall -c -fmessage-length=0 -o "src\\LinkedList.o" "..\\src\\LinkedList.c" 
gcc -o "Parcial 2 laboratorio.exe" "src\\LinkedList.o" "src\\Parcial 2 laboratorio.o" "src\\archivos.o" "src\\controller_Parcial2.o" "src\\editorial.o" "src\\input.o" "src\\libro.o" 
04:04:08 **** Incremental Build of configuration Debug for project Parcial 2 laboratorio ****
Info: Internal Builder is used for build
gcc -O0 -g3 -Wall -c -fmessage-length=0 -o "src\\controller_Parcial2.o" "..\\src\\controller_Parcial2.c" 
gcc -O0 -g3 -Wall -c -fmessage-length=0 -o "src\\Parcial 2 laboratorio.o" "..\\src\\Parcial 2 laboratorio.c" 
gcc -o "Parcial 2 laboratorio.exe" "src\\LinkedList.o" "src\\Parcial 2 laboratorio.o" "src\\archivos.o" "src\\controller_Parcial2.o" "src\\editorial.o" "src\\input.o" "src\\libro.o" 
